Fix the icon stretching.

--- a/src/skin/firestatus.css
+++ b/src/skin/firestatus.css
@@ -17,6 +17,7 @@
 #firestatusContainer {
   border-top: 1px solid #A8A8A8;
   border-bottom: none;
+  min-width: 1px;
   padding: 0 0 0 0;
 }
 
@@ -39,19 +40,32 @@
 #urlGroup {
 	padding-right: 20px;
 }
+
+#selectedConsumerTwitter {
+	padding: 0;
+}
+
+#selectedConsumerFacebook {
+	padding: 0;
+}
+
+#selectedConsumerFriendfeed {
+	padding: 0;
+}
+
 #twitter-icon {
 	list-style-image: url("chrome://firestatus/skin/twitter.png");
-	padding: 4px 4px;
+	padding-left: 2px;
 }
 
 #friendfeed-icon {
 	list-style-image: url("chrome://firestatus/skin/friendfeed.png");
-	padding: 4px 4px;
+	padding-left: 2px;
 }
 
 #facebook-icon {
 	list-style-image: url("chrome://firestatus/skin/facebook.png");
-	padding: 4px 4px;
+	padding-left: 2px;
 }
 
 #status-close {
